test/corpus/iterator.txt
========================
Iterator Types
========================

$roles = $array.map |String $role| { "role::${role}" }

---

(source_file
  (assignment
    (variable
      (identifier))
    (field_expression
      (variable (identifier))
      (builtin_iterator_funtions)
      (lambda
        (builtin_type)
        (variable
        (identifier))
        (block
          (string
            (string_content)
            (interpolation
              (identifier))))))))
